Removed the ActivationKey model from the database. User activation uses cache instead of the database. Full dockerization of the project.

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ djangorestframework-simplejwt = {version = "~=5.3.1", extras = ["crypto"]}
 psycopg = "*"
 psycopg2-binary = "*"
 celery = { version = "==5.4.0", extras = ["redis"] }
+redis = { version = "~=5.0", extras = ["hiredis"] }
 
 [dev-packages]
 isort = "*"
