--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,15 @@
-version: "3"
-
 services:
   broker:
     image: "redis:latest"
     container_name: hillel_support_broker
     ports:
       - "6379:6379"
+
+  cache:
+    image: "redis:latest"
+    container_name: hillel_support_cache
+    ports:
+      - "6380:6379"
 
   mailing:
     image: mailhog/mailhog:latest
@@ -24,7 +28,7 @@ services:
     volumes:
       - "pg_data:/var/lib/postgresql/data"
 
-  api:
+  api:  &app
     build:
       context: .
       dockerfile: Dockerfile
@@ -35,8 +39,18 @@ services:
     env_file: ".env"
     depends_on:
       - database
+      - broker
+      - mailing
+      - cache
     volumes:
       - ./:/app/
+
+  worker:
+    <<: *app
+    container_name: hillel_support_worker
+    ports: []
+    entrypoint: bash
+    command: -c "watchmedo auto-restart --pattern='*.py' --recursive -- celery -A config worker -l INFO"
 
 volumes:
   pg_data: {}
